--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.swinglabs.swingx</groupId>
+            <artifactId>swingx-all</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
